// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Transaction data for confirmation builder Approve transaction 1`] = `
Array [
  Object {
    "key": Object {
      "type": "placeholder",
    },
    "value": Object {
      "type": "localizable",
      "value": Object {
        "args": Array [
          "BUSD",
        ],
        "format": "To continue, you need to allow 1inch smart contracts to use your %%0%%. This has to be done only once for each token.",
      },
    },
  },
  Object {
    "key": Object {
      "type": "token",
      "value": Object {
        "token": Object {
          "address": "0x4fabb145d64652a948d72533023f6e7a623c7c53",
          "decimals": 18,
          "logoURI": "https://tokens.1inch.io/0x4fabb145d64652a948d72533023f6e7a623c7c53.png",
          "name": "Binance USD",
          "symbol": "BUSD",
        },
        "type": "amount",
      },
    },
    "value": Object {
      "type": "amount",
      "value": Object {
        "sign": "0",
        "token": Object {
          "address": "0x4fabb145d64652a948d72533023f6e7a623c7c53",
          "decimals": 18,
          "logoURI": "https://tokens.1inch.io/0x4fabb145d64652a948d72533023f6e7a623c7c53.png",
          "name": "Binance USD",
          "symbol": "BUSD",
        },
        "value": "115792089237316195423570985008687907853269984665640564039457584007913129639935",
      },
    },
  },
  Object {
    "key": Object {
      "type": "wallet",
      "value": Object {
        "type": "own",
      },
    },
    "value": Object {
      "type": "text",
      "value": Object {
        "text": "0x3b608c5243732903152e38f1dab1056a4a79b980",
        "type": "address",
      },
    },
  },
  Object {
    "key": Object {
      "type": "placeholder",
    },
    "value": Object {
      "type": "placeholder",
      "value": Object {
        "type": "fee",
      },
    },
  },
]
`;

exports[`Transaction data for confirmation builder Swap transaction: clipperSwap() 1`] = `
Array [
  Object {
    "key": Object {
      "type": "token",
      "value": Object {
        "token": Object {
          "address": "0x6b175474e89094c44da98b954eedeac495271d0f",
          "decimals": 18,
          "eip2612": true,
          "logoURI": "https://tokens.1inch.io/0x6b175474e89094c44da98b954eedeac495271d0f.png",
          "name": "Dai Stablecoin",
          "symbol": "DAI",
        },
        "type": "from",
      },
    },
    "value": Object {
      "type": "amount",
      "value": Object {
        "sign": "-",
        "token": Object {
          "address": "0x6b175474e89094c44da98b954eedeac495271d0f",
          "decimals": 18,
          "eip2612": true,
          "logoURI": "https://tokens.1inch.io/0x6b175474e89094c44da98b954eedeac495271d0f.png",
          "name": "Dai Stablecoin",
          "symbol": "DAI",
        },
        "value": Object {
          "hex": "0x1bc16d674ec80000",
          "type": "BigNumber",
        },
      },
    },
  },
  Object {
    "key": Object {
      "type": "token",
      "value": Object {
        "token": Object {
          "address": "0xeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeee",
          "decimals": 18,
          "logoURI": "https://tokens.1inch.io/0xeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeee.png",
          "name": "Ethereum",
          "symbol": "ETH",
        },
        "type": "to",
      },
    },
    "value": Object {
      "type": "amount",
      "value": Object {
        "sign": "+",
        "token": Object {
          "address": "0xeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeee",
          "decimals": 18,
          "logoURI": "https://tokens.1inch.io/0xeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeee.png",
          "name": "Ethereum",
          "symbol": "ETH",
        },
        "value": "459483882860783",
      },
    },
  },
  Object {
    "key": Object {
      "type": "wallet",
      "value": Object {
        "type": "own",
      },
    },
    "value": Object {
      "type": "text",
      "value": Object {
        "text": "0x3b608c5243732903152e38f1dab1056a4a79b980",
        "type": "address",
      },
    },
  },
  Object {
    "key": Object {
      "type": "placeholder",
    },
    "value": Object {
      "type": "placeholder",
      "value": Object {
        "type": "fee",
      },
    },
  },
  Object {
    "key": Object {
      "type": "title",
      "value": Object {
        "title": "Sell price",
      },
    },
    "value": Object {
      "type": "rate",
      "value": Object {
        "destinationAmount": "0.0002297419414303915",
        "destinationToken": Object {
          "address": "0xeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeee",
          "decimals": 18,
          "logoURI": "https://tokens.1inch.io/0xeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeee.png",
          "name": "Ethereum",
          "symbol": "ETH",
        },
        "sourceAmount": "1",
        "sourceToken": Object {
          "address": "0x6b175474e89094c44da98b954eedeac495271d0f",
          "decimals": 18,
          "eip2612": true,
          "logoURI": "https://tokens.1inch.io/0x6b175474e89094c44da98b954eedeac495271d0f.png",
          "name": "Dai Stablecoin",
          "symbol": "DAI",
        },
      },
    },
  },
  Object {
    "key": Object {
      "type": "title",
      "value": Object {
        "title": "Buy price",
      },
    },
    "value": Object {
      "type": "rate",
      "value": Object {
        "destinationAmount": "4352.70980028253",
        "destinationToken": Object {
          "address": "0x6b175474e89094c44da98b954eedeac495271d0f",
          "decimals": 18,
          "eip2612": true,
          "logoURI": "https://tokens.1inch.io/0x6b175474e89094c44da98b954eedeac495271d0f.png",
          "name": "Dai Stablecoin",
          "symbol": "DAI",
        },
        "sourceAmount": "1",
        "sourceToken": Object {
          "address": "0xeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeee",
          "decimals": 18,
          "logoURI": "https://tokens.1inch.io/0xeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeee.png",
          "name": "Ethereum",
          "symbol": "ETH",
        },
      },
    },
  },
  Object {
    "key": Object {
      "type": "title",
      "value": Object {
        "title": "Minimum Received",
      },
    },
    "value": Object {
      "type": "amount",
      "value": Object {
        "sign": "0",
        "token": Object {
          "address": "0xeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeee",
          "decimals": 18,
          "logoURI": "https://tokens.1inch.io/0xeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeee.png",
          "name": "Ethereum",
          "symbol": "ETH",
        },
        "value": Object {
          "hex": "0x018227176f419e",
          "type": "BigNumber",
        },
      },
    },
  },
]
`;

exports[`Transaction data for confirmation builder Swap transaction: clipperSwapWithPermit() 1`] = `
Array [
  Object {
    "key": Object {
      "type": "token",
      "value": Object {
        "token": Object {
          "address": "0xa0b86991c6218b36c1d19d4a2e9eb0ce3606eb48",
          "decimals": 6,
          "eip2612": true,
          "logoURI": "https://tokens.1inch.io/0xa0b86991c6218b36c1d19d4a2e9eb0ce3606eb48.png",
          "name": "USD Coin",
          "symbol": "USDC",
        },
        "type": "from",
      },
    },
    "value": Object {
      "type": "amount",
      "value": Object {
        "sign": "-",
        "token": Object {
          "address": "0xa0b86991c6218b36c1d19d4a2e9eb0ce3606eb48",
          "decimals": 6,
          "eip2612": true,
          "logoURI": "https://tokens.1inch.io/0xa0b86991c6218b36c1d19d4a2e9eb0ce3606eb48.png",
          "name": "USD Coin",
          "symbol": "USDC",
        },
        "value": Object {
          "hex": "0x1e8480",
          "type": "BigNumber",
        },
      },
    },
  },
  Object {
    "key": Object {
      "type": "token",
      "value": Object {
        "token": Object {
          "address": "0xeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeee",
          "decimals": 18,
          "logoURI": "https://tokens.1inch.io/0xeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeee.png",
          "name": "Ethereum",
          "symbol": "ETH",
        },
        "type": "to",
      },
    },
    "value": Object {
      "type": "amount",
      "value": Object {
        "sign": "+",
        "token": Object {
          "address": "0xeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeee",
          "decimals": 18,
          "logoURI": "https://tokens.1inch.io/0xeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeee.png",
          "name": "Ethereum",
          "symbol": "ETH",
        },
        "value": "425128486899692",
      },
    },
  },
  Object {
    "key": Object {
      "type": "wallet",
      "value": Object {
        "type": "own",
      },
    },
    "value": Object {
      "type": "text",
      "value": Object {
        "text": "0x3b608c5243732903152e38f1dab1056a4a79b980",
        "type": "address",
      },
    },
  },
  Object {
    "key": Object {
      "type": "placeholder",
    },
    "value": Object {
      "type": "placeholder",
      "value": Object {
        "type": "fee",
      },
    },
  },
  Object {
    "key": Object {
      "type": "title",
      "value": Object {
        "title": "Sell price",
      },
    },
    "value": Object {
      "type": "rate",
      "value": Object {
        "destinationAmount": "0.000212564243449846",
        "destinationToken": Object {
          "address": "0xeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeee",
          "decimals": 18,
          "logoURI": "https://tokens.1inch.io/0xeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeee.png",
          "name": "Ethereum",
          "symbol": "ETH",
        },
        "sourceAmount": "1",
        "sourceToken": Object {
          "address": "0xa0b86991c6218b36c1d19d4a2e9eb0ce3606eb48",
          "decimals": 6,
          "eip2612": true,
          "logoURI": "https://tokens.1inch.io/0xa0b86991c6218b36c1d19d4a2e9eb0ce3606eb48.png",
          "name": "USD Coin",
          "symbol": "USDC",
        },
      },
    },
  },
  Object {
    "key": Object {
      "type": "title",
      "value": Object {
        "title": "Buy price",
      },
    },
    "value": Object {
      "type": "rate",
      "value": Object {
        "destinationAmount": "4704.4600906076075",
        "destinationToken": Object {
          "address": "0xa0b86991c6218b36c1d19d4a2e9eb0ce3606eb48",
          "decimals": 6,
          "eip2612": true,
          "logoURI": "https://tokens.1inch.io/0xa0b86991c6218b36c1d19d4a2e9eb0ce3606eb48.png",
          "name": "USD Coin",
          "symbol": "USDC",
        },
        "sourceAmount": "1",
        "sourceToken": Object {
          "address": "0xeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeee",
          "decimals": 18,
          "logoURI": "https://tokens.1inch.io/0xeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeee.png",
          "name": "Ethereum",
          "symbol": "ETH",
        },
      },
    },
  },
  Object {
    "key": Object {
      "type": "title",
      "value": Object {
        "title": "Minimum Received",
      },
    },
    "value": Object {
      "type": "amount",
      "value": Object {
        "sign": "0",
        "token": Object {
          "address": "0xeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeee",
          "decimals": 18,
          "logoURI": "https://tokens.1inch.io/0xeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeee.png",
          "name": "Ethereum",
          "symbol": "ETH",
        },
        "value": Object {
          "hex": "0x018243f4d027f8",
          "type": "BigNumber",
        },
      },
    },
  },
]
`;

exports[`Transaction data for confirmation builder Swap transaction: swap() 1`] = `
Array [
  Object {
    "key": Object {
      "type": "token",
      "value": Object {
        "token": Object {
          "address": "0xdac17f958d2ee523a2206206994597c13d831ec7",
          "decimals": 6,
          "logoURI": "https://tokens.1inch.io/0xdac17f958d2ee523a2206206994597c13d831ec7.png",
          "name": "Tether USD",
          "symbol": "USDT",
        },
        "type": "from",
      },
    },
    "value": Object {
      "type": "amount",
      "value": Object {
        "sign": "-",
        "token": Object {
          "address": "0xdac17f958d2ee523a2206206994597c13d831ec7",
          "decimals": 6,
          "logoURI": "https://tokens.1inch.io/0xdac17f958d2ee523a2206206994597c13d831ec7.png",
          "name": "Tether USD",
          "symbol": "USDT",
        },
        "value": Object {
          "hex": "0x1aa5803219",
          "type": "BigNumber",
        },
      },
    },
  },
  Object {
    "key": Object {
      "type": "token",
      "value": Object {
        "token": Object {
          "address": "0x853d955acef822db058eb8505911ed77f175b99e",
          "decimals": 18,
          "logoURI": "https://tokens.1inch.io/0x853d955acef822db058eb8505911ed77f175b99e.png",
          "name": "Frax",
          "symbol": "FRAX",
        },
        "type": "to",
      },
    },
    "value": Object {
      "type": "amount",
      "value": Object {
        "sign": "+",
        "token": Object {
          "address": "0x853d955acef822db058eb8505911ed77f175b99e",
          "decimals": 18,
          "logoURI": "https://tokens.1inch.io/0x853d955acef822db058eb8505911ed77f175b99e.png",
          "name": "Frax",
          "symbol": "FRAX",
        },
        "value": "114241200360986751251430",
      },
    },
  },
  Object {
    "key": Object {
      "type": "wallet",
      "value": Object {
        "type": "own",
      },
    },
    "value": Object {
      "type": "text",
      "value": Object {
        "text": "0x64741d0b9e376d75873c12e1b0cdccc26c3bcb04",
        "type": "address",
      },
    },
  },
  Object {
    "key": Object {
      "type": "placeholder",
    },
    "value": Object {
      "type": "placeholder",
      "value": Object {
        "type": "fee",
      },
    },
  },
  Object {
    "key": Object {
      "type": "title",
      "value": Object {
        "title": "Sell price",
      },
    },
    "value": Object {
      "type": "rate",
      "value": Object {
        "destinationAmount": "0.9982123291311034",
        "destinationToken": Object {
          "address": "0x853d955acef822db058eb8505911ed77f175b99e",
          "decimals": 18,
          "logoURI": "https://tokens.1inch.io/0x853d955acef822db058eb8505911ed77f175b99e.png",
          "name": "Frax",
          "symbol": "FRAX",
        },
        "sourceAmount": "1",
        "sourceToken": Object {
          "address": "0xdac17f958d2ee523a2206206994597c13d831ec7",
          "decimals": 6,
          "logoURI": "https://tokens.1inch.io/0xdac17f958d2ee523a2206206994597c13d831ec7.png",
          "name": "Tether USD",
          "symbol": "USDT",
        },
      },
    },
  },
  Object {
    "key": Object {
      "type": "title",
      "value": Object {
        "title": "Buy price",
      },
    },
    "value": Object {
      "type": "rate",
      "value": Object {
        "destinationAmount": "1.0017908723592432",
        "destinationToken": Object {
          "address": "0xdac17f958d2ee523a2206206994597c13d831ec7",
          "decimals": 6,
          "logoURI": "https://tokens.1inch.io/0xdac17f958d2ee523a2206206994597c13d831ec7.png",
          "name": "Tether USD",
          "symbol": "USDT",
        },
        "sourceAmount": "1",
        "sourceToken": Object {
          "address": "0x853d955acef822db058eb8505911ed77f175b99e",
          "decimals": 18,
          "logoURI": "https://tokens.1inch.io/0x853d955acef822db058eb8505911ed77f175b99e.png",
          "name": "Frax",
          "symbol": "FRAX",
        },
      },
    },
  },
  Object {
    "key": Object {
      "type": "title",
      "value": Object {
        "title": "Minimum Received",
      },
    },
    "value": Object {
      "type": "amount",
      "value": Object {
        "sign": "0",
        "token": Object {
          "address": "0x853d955acef822db058eb8505911ed77f175b99e",
          "decimals": 18,
          "logoURI": "https://tokens.1inch.io/0x853d955acef822db058eb8505911ed77f175b99e.png",
          "name": "Frax",
          "symbol": "FRAX",
        },
        "value": Object {
          "hex": "0x181b5805bbc9ae4bb3e6",
          "type": "BigNumber",
        },
      },
    },
  },
]
`;

exports[`Transaction data for confirmation builder Swap transaction: uniswapV3Swap() 1`] = `
Array [
  Object {
    "key": Object {
      "type": "token",
      "value": Object {
        "token": Object {
          "address": "0x6b3595068778dd592e39a122f4f5a5cf09c90fe2",
          "decimals": 18,
          "logoURI": "https://tokens.1inch.io/0x6b3595068778dd592e39a122f4f5a5cf09c90fe2.png",
          "name": "SushiToken",
          "symbol": "SUSHI",
        },
        "type": "from",
      },
    },
    "value": Object {
      "type": "amount",
      "value": Object {
        "sign": "-",
        "token": Object {
          "address": "0x6b3595068778dd592e39a122f4f5a5cf09c90fe2",
          "decimals": 18,
          "logoURI": "https://tokens.1inch.io/0x6b3595068778dd592e39a122f4f5a5cf09c90fe2.png",
          "name": "SushiToken",
          "symbol": "SUSHI",
        },
        "value": Object {
          "hex": "0x016345785d8a0000",
          "type": "BigNumber",
        },
      },
    },
  },
  Object {
    "key": Object {
      "type": "token",
      "value": Object {
        "token": Object {
          "address": "0xeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeee",
          "decimals": 18,
          "logoURI": "https://tokens.1inch.io/0xeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeee.png",
          "name": "Ethereum",
          "symbol": "ETH",
        },
        "type": "to",
      },
    },
    "value": Object {
      "type": "amount",
      "value": Object {
        "sign": "+",
        "token": Object {
          "address": "0xeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeee",
          "decimals": 18,
          "logoURI": "https://tokens.1inch.io/0xeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeee.png",
          "name": "Ethereum",
          "symbol": "ETH",
        },
        "value": "237839432511886",
      },
    },
  },
  Object {
    "key": Object {
      "type": "wallet",
      "value": Object {
        "type": "own",
      },
    },
    "value": Object {
      "type": "text",
      "value": Object {
        "text": "0x3b608c5243732903152e38f1dab1056a4a79b980",
        "type": "address",
      },
    },
  },
  Object {
    "key": Object {
      "type": "placeholder",
    },
    "value": Object {
      "type": "placeholder",
      "value": Object {
        "type": "fee",
      },
    },
  },
  Object {
    "key": Object {
      "type": "title",
      "value": Object {
        "title": "Sell price",
      },
    },
    "value": Object {
      "type": "rate",
      "value": Object {
        "destinationAmount": "0.00237839432511886",
        "destinationToken": Object {
          "address": "0xeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeee",
          "decimals": 18,
          "logoURI": "https://tokens.1inch.io/0xeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeee.png",
          "name": "Ethereum",
          "symbol": "ETH",
        },
        "sourceAmount": "1",
        "sourceToken": Object {
          "address": "0x6b3595068778dd592e39a122f4f5a5cf09c90fe2",
          "decimals": 18,
          "logoURI": "https://tokens.1inch.io/0x6b3595068778dd592e39a122f4f5a5cf09c90fe2.png",
          "name": "SushiToken",
          "symbol": "SUSHI",
        },
      },
    },
  },
  Object {
    "key": Object {
      "type": "title",
      "value": Object {
        "title": "Buy price",
      },
    },
    "value": Object {
      "type": "rate",
      "value": Object {
        "destinationAmount": "420.45172637637586",
        "destinationToken": Object {
          "address": "0x6b3595068778dd592e39a122f4f5a5cf09c90fe2",
          "decimals": 18,
          "logoURI": "https://tokens.1inch.io/0x6b3595068778dd592e39a122f4f5a5cf09c90fe2.png",
          "name": "SushiToken",
          "symbol": "SUSHI",
        },
        "sourceAmount": "1",
        "sourceToken": Object {
          "address": "0xeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeee",
          "decimals": 18,
          "logoURI": "https://tokens.1inch.io/0xeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeee.png",
          "name": "Ethereum",
          "symbol": "ETH",
        },
      },
    },
  },
  Object {
    "key": Object {
      "type": "title",
      "value": Object {
        "title": "Minimum Received",
      },
    },
    "value": Object {
      "type": "amount",
      "value": Object {
        "sign": "0",
        "token": Object {
          "address": "0xeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeee",
          "decimals": 18,
          "logoURI": "https://tokens.1inch.io/0xeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeee.png",
          "name": "Ethereum",
          "symbol": "ETH",
        },
        "value": Object {
          "hex": "0xd818ee8db64e",
          "type": "BigNumber",
        },
      },
    },
  },
]
`;

exports[`Transaction data for confirmation builder Swap transaction: uniswapV3SwapToWithPermit() 1`] = `
Array [
  Object {
    "key": Object {
      "type": "token",
      "value": Object {
        "token": Object {
          "address": "0x111111111117dc0aa78b770fa6a738034120c302",
          "decimals": 18,
          "eip2612": true,
          "logoURI": "https://tokens.1inch.io/0x111111111117dc0aa78b770fa6a738034120c302.png",
          "name": "1INCH Token",
          "symbol": "1INCH",
        },
        "type": "from",
      },
    },
    "value": Object {
      "type": "amount",
      "value": Object {
        "sign": "-",
        "token": Object {
          "address": "0x111111111117dc0aa78b770fa6a738034120c302",
          "decimals": 18,
          "eip2612": true,
          "logoURI": "https://tokens.1inch.io/0x111111111117dc0aa78b770fa6a738034120c302.png",
          "name": "1INCH Token",
          "symbol": "1INCH",
        },
        "value": Object {
          "hex": "0x8a720b1faca5b698",
          "type": "BigNumber",
        },
      },
    },
  },
  Object {
    "key": Object {
      "type": "token",
      "value": Object {
        "token": Object {
          "address": "0x6dea81c8171d0ba574754ef6f8b412f2ed88c54d",
          "decimals": 18,
          "eip2612": true,
          "logoURI": "https://tokens.1inch.io/0x6dea81c8171d0ba574754ef6f8b412f2ed88c54d.png",
          "name": "LQTY",
          "symbol": "LQTY",
        },
        "type": "to",
      },
    },
    "value": Object {
      "type": "amount",
      "value": Object {
        "sign": "+",
        "token": Object {
          "address": "0x6dea81c8171d0ba574754ef6f8b412f2ed88c54d",
          "decimals": 18,
          "eip2612": true,
          "logoURI": "https://tokens.1inch.io/0x6dea81c8171d0ba574754ef6f8b412f2ed88c54d.png",
          "name": "LQTY",
          "symbol": "LQTY",
        },
        "value": "3205160238574434958",
      },
    },
  },
  Object {
    "key": Object {
      "type": "wallet",
      "value": Object {
        "type": "own",
      },
    },
    "value": Object {
      "type": "text",
      "value": Object {
        "text": "0x3b608c5243732903152e38f1dab1056a4a79b980",
        "type": "address",
      },
    },
  },
  Object {
    "key": Object {
      "type": "placeholder",
    },
    "value": Object {
      "type": "placeholder",
      "value": Object {
        "type": "fee",
      },
    },
  },
  Object {
    "key": Object {
      "type": "title",
      "value": Object {
        "title": "Sell price",
      },
    },
    "value": Object {
      "type": "rate",
      "value": Object {
        "destinationAmount": "0.3212855556066434",
        "destinationToken": Object {
          "address": "0x6dea81c8171d0ba574754ef6f8b412f2ed88c54d",
          "decimals": 18,
          "eip2612": true,
          "logoURI": "https://tokens.1inch.io/0x6dea81c8171d0ba574754ef6f8b412f2ed88c54d.png",
          "name": "LQTY",
          "symbol": "LQTY",
        },
        "sourceAmount": "1",
        "sourceToken": Object {
          "address": "0x111111111117dc0aa78b770fa6a738034120c302",
          "decimals": 18,
          "eip2612": true,
          "logoURI": "https://tokens.1inch.io/0x111111111117dc0aa78b770fa6a738034120c302.png",
          "name": "1INCH Token",
          "symbol": "1INCH",
        },
      },
    },
  },
  Object {
    "key": Object {
      "type": "title",
      "value": Object {
        "title": "Buy price",
      },
    },
    "value": Object {
      "type": "rate",
      "value": Object {
        "destinationAmount": "3.1124959791977727",
        "destinationToken": Object {
          "address": "0x111111111117dc0aa78b770fa6a738034120c302",
          "decimals": 18,
          "eip2612": true,
          "logoURI": "https://tokens.1inch.io/0x111111111117dc0aa78b770fa6a738034120c302.png",
          "name": "1INCH Token",
          "symbol": "1INCH",
        },
        "sourceAmount": "1",
        "sourceToken": Object {
          "address": "0x6dea81c8171d0ba574754ef6f8b412f2ed88c54d",
          "decimals": 18,
          "eip2612": true,
          "logoURI": "https://tokens.1inch.io/0x6dea81c8171d0ba574754ef6f8b412f2ed88c54d.png",
          "name": "LQTY",
          "symbol": "LQTY",
        },
      },
    },
  },
  Object {
    "key": Object {
      "type": "title",
      "value": Object {
        "title": "Minimum Received",
      },
    },
    "value": Object {
      "type": "amount",
      "value": Object {
        "sign": "0",
        "token": Object {
          "address": "0x6dea81c8171d0ba574754ef6f8b412f2ed88c54d",
          "decimals": 18,
          "eip2612": true,
          "logoURI": "https://tokens.1inch.io/0x6dea81c8171d0ba574754ef6f8b412f2ed88c54d.png",
          "name": "LQTY",
          "symbol": "LQTY",
        },
        "value": Object {
          "hex": "0x2c58db06cc07b865",
          "type": "BigNumber",
        },
      },
    },
  },
]
`;

exports[`Transaction data for confirmation builder Swap transaction: unoswap() 1`] = `
Array [
  Object {
    "key": Object {
      "type": "token",
      "value": Object {
        "token": Object {
          "address": "0x111111111117dc0aa78b770fa6a738034120c302",
          "decimals": 18,
          "eip2612": true,
          "logoURI": "https://tokens.1inch.io/0x111111111117dc0aa78b770fa6a738034120c302.png",
          "name": "1INCH Token",
          "symbol": "1INCH",
        },
        "type": "from",
      },
    },
    "value": Object {
      "type": "amount",
      "value": Object {
        "sign": "-",
        "token": Object {
          "address": "0x111111111117dc0aa78b770fa6a738034120c302",
          "decimals": 18,
          "eip2612": true,
          "logoURI": "https://tokens.1inch.io/0x111111111117dc0aa78b770fa6a738034120c302.png",
          "name": "1INCH Token",
          "symbol": "1INCH",
        },
        "value": Object {
          "hex": "0x0de0b6b3a7640000",
          "type": "BigNumber",
        },
      },
    },
  },
  Object {
    "key": Object {
      "type": "token",
      "value": Object {
        "token": Object {
          "address": "0xeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeee",
          "decimals": 18,
          "logoURI": "https://tokens.1inch.io/0xeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeee.png",
          "name": "Ethereum",
          "symbol": "ETH",
        },
        "type": "to",
      },
    },
    "value": Object {
      "type": "amount",
      "value": Object {
        "sign": "+",
        "token": Object {
          "address": "0xeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeee",
          "decimals": 18,
          "logoURI": "https://tokens.1inch.io/0xeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeee.png",
          "name": "Ethereum",
          "symbol": "ETH",
        },
        "value": "928900907292644",
      },
    },
  },
  Object {
    "key": Object {
      "type": "wallet",
      "value": Object {
        "type": "own",
      },
    },
    "value": Object {
      "type": "text",
      "value": Object {
        "text": "0x3b608c5243732903152e38f1dab1056a4a79b980",
        "type": "address",
      },
    },
  },
  Object {
    "key": Object {
      "type": "placeholder",
    },
    "value": Object {
      "type": "placeholder",
      "value": Object {
        "type": "fee",
      },
    },
  },
  Object {
    "key": Object {
      "type": "title",
      "value": Object {
        "title": "Sell price",
      },
    },
    "value": Object {
      "type": "rate",
      "value": Object {
        "destinationAmount": "0.000928900907292644",
        "destinationToken": Object {
          "address": "0xeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeee",
          "decimals": 18,
          "logoURI": "https://tokens.1inch.io/0xeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeee.png",
          "name": "Ethereum",
          "symbol": "ETH",
        },
        "sourceAmount": "1",
        "sourceToken": Object {
          "address": "0x111111111117dc0aa78b770fa6a738034120c302",
          "decimals": 18,
          "eip2612": true,
          "logoURI": "https://tokens.1inch.io/0x111111111117dc0aa78b770fa6a738034120c302.png",
          "name": "1INCH Token",
          "symbol": "1INCH",
        },
      },
    },
  },
  Object {
    "key": Object {
      "type": "title",
      "value": Object {
        "title": "Buy price",
      },
    },
    "value": Object {
      "type": "rate",
      "value": Object {
        "destinationAmount": "1076.5410951256147",
        "destinationToken": Object {
          "address": "0x111111111117dc0aa78b770fa6a738034120c302",
          "decimals": 18,
          "eip2612": true,
          "logoURI": "https://tokens.1inch.io/0x111111111117dc0aa78b770fa6a738034120c302.png",
          "name": "1INCH Token",
          "symbol": "1INCH",
        },
        "sourceAmount": "1",
        "sourceToken": Object {
          "address": "0xeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeee",
          "decimals": 18,
          "logoURI": "https://tokens.1inch.io/0xeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeee.png",
          "name": "Ethereum",
          "symbol": "ETH",
        },
      },
    },
  },
  Object {
    "key": Object {
      "type": "title",
      "value": Object {
        "title": "Minimum Received",
      },
    },
    "value": Object {
      "type": "amount",
      "value": Object {
        "sign": "0",
        "token": Object {
          "address": "0xeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeee",
          "decimals": 18,
          "logoURI": "https://tokens.1inch.io/0xeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeee.png",
          "name": "Ethereum",
          "symbol": "ETH",
        },
        "value": Object {
          "hex": "0x034bfc51cd56c7",
          "type": "BigNumber",
        },
      },
    },
  },
]
`;

exports[`Transaction data for confirmation builder Swap transaction: unoswapWithPermit() 1`] = `
Array [
  Object {
    "key": Object {
      "type": "token",
      "value": Object {
        "token": Object {
          "address": "0x19042021329fddcfbea5f934fb5b2670c91f7d20",
          "decimals": 6,
          "eip2612": true,
          "logoURI": "https://tokens.1inch.exchange/0x19042021329fddcfbea5f934fb5b2670c91f7d20.png",
          "name": "Take My Muffin",
          "symbol": "TMM",
        },
        "type": "from",
      },
    },
    "value": Object {
      "type": "amount",
      "value": Object {
        "sign": "-",
        "token": Object {
          "address": "0x19042021329fddcfbea5f934fb5b2670c91f7d20",
          "decimals": 6,
          "eip2612": true,
          "logoURI": "https://tokens.1inch.exchange/0x19042021329fddcfbea5f934fb5b2670c91f7d20.png",
          "name": "Take My Muffin",
          "symbol": "TMM",
        },
        "value": Object {
          "hex": "0x0186a0",
          "type": "BigNumber",
        },
      },
    },
  },
  Object {
    "key": Object {
      "type": "token",
      "value": Object {
        "token": Object {
          "address": "0xeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeee",
          "decimals": 18,
          "logoURI": "https://tokens.1inch.io/0xeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeee.png",
          "name": "Ethereum",
          "symbol": "ETH",
        },
        "type": "to",
      },
    },
    "value": Object {
      "type": "amount",
      "value": Object {
        "sign": "+",
        "token": Object {
          "address": "0xeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeee",
          "decimals": 18,
          "logoURI": "https://tokens.1inch.io/0xeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeee.png",
          "name": "Ethereum",
          "symbol": "ETH",
        },
        "value": "224395484185470",
      },
    },
  },
  Object {
    "key": Object {
      "type": "wallet",
      "value": Object {
        "type": "own",
      },
    },
    "value": Object {
      "type": "text",
      "value": Object {
        "text": "0x3b608c5243732903152e38f1dab1056a4a79b980",
        "type": "address",
      },
    },
  },
  Object {
    "key": Object {
      "type": "placeholder",
    },
    "value": Object {
      "type": "placeholder",
      "value": Object {
        "type": "fee",
      },
    },
  },
  Object {
    "key": Object {
      "type": "title",
      "value": Object {
        "title": "Sell price",
      },
    },
    "value": Object {
      "type": "rate",
      "value": Object {
        "destinationAmount": "0.0022439548418547",
        "destinationToken": Object {
          "address": "0xeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeee",
          "decimals": 18,
          "logoURI": "https://tokens.1inch.io/0xeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeee.png",
          "name": "Ethereum",
          "symbol": "ETH",
        },
        "sourceAmount": "1",
        "sourceToken": Object {
          "address": "0x19042021329fddcfbea5f934fb5b2670c91f7d20",
          "decimals": 6,
          "eip2612": true,
          "logoURI": "https://tokens.1inch.exchange/0x19042021329fddcfbea5f934fb5b2670c91f7d20.png",
          "name": "Take My Muffin",
          "symbol": "TMM",
        },
      },
    },
  },
  Object {
    "key": Object {
      "type": "title",
      "value": Object {
        "title": "Buy price",
      },
    },
    "value": Object {
      "type": "rate",
      "value": Object {
        "destinationAmount": "445.6417666469029",
        "destinationToken": Object {
          "address": "0x19042021329fddcfbea5f934fb5b2670c91f7d20",
          "decimals": 6,
          "eip2612": true,
          "logoURI": "https://tokens.1inch.exchange/0x19042021329fddcfbea5f934fb5b2670c91f7d20.png",
          "name": "Take My Muffin",
          "symbol": "TMM",
        },
        "sourceAmount": "1",
        "sourceToken": Object {
          "address": "0xeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeee",
          "decimals": 18,
          "logoURI": "https://tokens.1inch.io/0xeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeee.png",
          "name": "Ethereum",
          "symbol": "ETH",
        },
      },
    },
  },
  Object {
    "key": Object {
      "type": "title",
      "value": Object {
        "title": "Minimum Received",
      },
    },
    "value": Object {
      "type": "amount",
      "value": Object {
        "sign": "0",
        "token": Object {
          "address": "0xeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeee",
          "decimals": 18,
          "logoURI": "https://tokens.1inch.io/0xeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeee.png",
          "name": "Ethereum",
          "symbol": "ETH",
        },
        "value": Object {
          "hex": "0xcbe1e61c6764",
          "type": "BigNumber",
        },
      },
    },
  },
]
`;
